--- a/vpp.env
+++ b/vpp.env
@@ -1,2 +1,2 @@
 VPP_REPO_URL=https://github.com/FDio/vpp.git
-VPP_COMMIT=22af447454cf097ac4fc59f9072d805c371ab803 # v19.01-rc0~580-g22af4474
+VPP_COMMIT=cd56f69af9adcd23cac6d625ef2169e3ef3635fc # v19.01-2~gcd56f69af
